is_component_build = false
is_debug = false
v8_monolithic = true

# target_cpu = "x64"
# v8_target_cpu="x64"

v8_enable_backtrace = true
v8_enable_slow_dchecks = false
v8_enable_sandbox = false

#is_clang = true
#clang_base_path = "/usr"
#clang_use_chrome_plugins = false
#clang_version = "11.0.0"
use_custom_libcxx = false

v8_enable_i18n_support = false

v8_use_external_startup_data = false
